--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Quiz/Item" asp-route-itemId="1" asp-route-quizId="1">Quiz</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Quiz/Index" asp-route-itemId="1" asp-route-quizId="1">Quiz</a>
                     </li>
                 </ul>
             </div>
@@ -38,10 +38,9 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        2023 - Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
     </div>
 </footer>
-
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
